# xdocs

./: .doc-manifest.yaml  .gitignore  AGENTS.md  CLAUDE.md  FORGE-HANDOFF.2026-03-04.md  FORGE-HANDOFF.md  FORGE-MEMORY.2026-03-04.md  FORGE-MEMORY.md  FORGE-STATUS.2026-03-04.md  FORGE-STATUS.md  HANDOFF.md  HUMAN-INPUT.md  LICENSE  MISSION-CONTROL.md  QA-REPORT.md  README.md  SUGGESTIONS.md  TODO.2026-03-04.md  TODO.md  deep-review-cex-api-docs-readable.md  deep-review-cex-api-docs.md  install.sh  pyproject.toml  security_best_practices_report.md
architect/: STATE.md  index-build-optimization.md  m23-phase2-plan.md  maintenance-cycle-proposal.md  prompt.md  transcript.md
bug-reports/: README.md
data/: error_code_patterns.yaml  exchanges.yaml
docs/: crawl-targets-bible.md
logs/: ab-retrieval-benchmark-2026-02-24.md  ab-retrieval-benchmark-focused-2026-02-24.md  exchange-template-fallback-eval-2026-02-25.json  full-method-evaluation-2026-02-25.md  hybrid-rerank-diff-2026-02-25.json  per-exchange-semantic-latency-2026-02-25.json  retrieval-mode-eval-2026-02-25.json  retrieval-mode-eval-norerank-2026-02-25.json  staged-retrieval-smoke-2026-02-25.json  validate-retrieval-summary-2026-02-25.json
reports/: 2026-02-26-benchmark-test-eval-summary.md  2026-02-26-maintenance-run-summary.md  2026-02-26T152920Z-crawl-refresh-benchmark.json  2026-02-26T152926Z-crawl-refresh-benchmark.json  2026-02-26T153038Z-extraction-quality-benchmark.json  2026-02-26T153651Z-extraction-quality-benchmark.json  2026-02-26T153729Z-crawl-refresh-benchmark.json  2026-02-26T154535Z-crawl-refresh-benchmark.json  2026-02-26T160152Z-crawl-refresh-benchmark.json  2026-02-26T160943Z-crawl-refresh-benchmark.json  2026-02-26T161806Z-extraction-quality-benchmark.json  2026-02-26T162213Z-extraction-quality-benchmark.json  2026-02-26T163938Z-extraction-quality-benchmark.json  2026-02-26T164126Z-extraction-quality-benchmark.json  2026-02-26T173104Z-validate-retrieval-no-rerank.json  2026-02-26T174042Z-crawl-refresh-benchmark.json  2026-02-26T174308Z-extraction-quality-benchmark.json  2026-02-26T1744-validate-retrieval-no-rerank.json  2026-02-26T1745-validate-retrieval-rerank.json  2026-02-26T1750-store-report.json  2026-02-26T175032Z-crawl-refresh-benchmark.json  2026-02-26T185823-sync-aevo-api.json  2026-02-26T185900-sync-perp-docs.json  2026-02-26T190327-sync-gains-docs.json  2026-02-26T190746-sync-kwenta-docs-min.json  2026-02-26T191104-sync-lighter-docs-min.json  2026-02-26T191527-sync-ccxt-manual-min.json  2026-02-26T191918-sync-gmx-docs-refetch.json  2026-02-26T192230-fetch-gmx-docs.json  2026-02-26T192333-sync-drift-docs-refresh.json  2026-02-26T193100-validate-retrieval-no-rerank.json  2026-02-26T193122-validate-retrieval-rerank.json  2026-02-26T194618Z-extraction-quality-benchmark.json  2026-02-26T194656Z-crawl-refresh-benchmark.json  2026-02-26T194920-fetch-upbit-rest_en.json  2026-02-26T195648-fetch-upbit-rest_ko.json  2026-02-26T195651-fetch-bithumb-rest.json  2026-02-26T195959-fetch-coinone-rest.json  2026-02-26T200106-fetch-korbit-rest.json  2026-02-26T200239Z-extraction-quality-benchmark.json  (+75 more)
schema/: schema.sql
schemas/: endpoint.schema.json  page_meta.schema.json
scripts/: ab_test_m20.py  analyze_table_chunking.py  bench_crawl_refresh.py  bench_extraction_quality.py  bench_heading_context.py  bench_retrieval_quality.py  bench_token_estimation.py  benchmark_embeddings.py  benchmark_mlx.py  benchmark_rerankers.py  bootstrap-data.sh  bootstrap.sh  check_links.sh  poc_full_binance.py  poc_lancedb_eval.py  pre_share_check.sh  refresh_ccxt_docs.sh  (+7 more)
(+610 files in other folders)
