[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cex-api-docs"
version = "0.1.0"
description = "Local-only, cite-only CEX API docs knowledge base (crawler + SQLite FTS5 + agent extraction ingest)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Internal" }]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.32",
  "beautifulsoup4>=4.12.3",
  "html2text>=2024.2.26",
  "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
playwright = [
  "playwright>=1.48",
]
semantic = [
  "lancedb>=0.20",
  "sentence-transformers>=3.0",
]

[project.scripts]
cex-api-docs = "cex_api_docs.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
