[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cex-api-docs"
version = "0.1.0"
description = "Local-only, cite-only CEX API docs knowledge base (crawler + SQLite FTS5 + agent extraction ingest)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Internal" }]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.32",
  "beautifulsoup4>=4.12.3",
  "html2text>=2024.2.26",
  "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
playwright = [
  "playwright>=1.48",
]
semantic-query = [
  "lancedb>=0.20",
  "mlx>=0.20; sys_platform == 'darwin'",
  "tokenizers>=0.20; sys_platform == 'darwin'",
  "huggingface-hub>=0.24",
  "mistune>=3.0",
]
semantic = [
  "lancedb>=0.20",
  "mlx>=0.20; sys_platform == 'darwin'",
  "tokenizers>=0.20",
  "huggingface-hub>=0.24",
  "sentence-transformers>=3.0",
  "peft>=0.15.2",
  "mistune>=3.0",
]
ccxt = [
  "ccxt>=4.4",
]
reranker = [
  "huggingface_hub>=0.27",
  "mlx>=0.20",
  "mlx-lm>=0.20",
]

[project.scripts]
cex-api-docs = "cex_api_docs.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not slow'"
